src/test/deca/syntax/invalid/homemade/test/test_lex_inv_chaine_non_ouverte.deca
// Test pour une chaine non ouverte
{
    chaine non ouverte";
}